# Nikiro_simulation

./: LICENSE  README.md
amr_description/: CMakeLists.txt  package.xml
amr_description/config/: coe_final.pgm  coe_final.yaml  mapper_params_online_async.yaml  nav2_params.yaml
amr_description/launch/: amr_bot_gazebo_spawn.launch.py  gazebo.launch.py  mapping.launch.py  nav2.launch.py  rviz.launch.py
amr_description/meshes/: base_link.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl  stand_1.stl
amr_description/scripts/: remapper.py
amr_description/urdf/: amr.gazebo  amr.trans  amr.xacro  loki.urdf
amr_description/worlds/: empty.sdf
conveyor_automation/: package.xml  setup.cfg  setup.py
conveyor_automation/conveyor_automation/: conveyor_automation_node.py
mycobot_ros2/mycobot_description/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_description/launch/: mycobot_280_jn.launch.py
mycobot_ros2/mycobot_description/rviz/: mycobot_280_view.rviz
mycobot_ros2/mycobot_description/urdf/: mycobot.sdf  mycobot.urdf  mycobot_280_urdf.xacro
mycobot_ros2/mycobot_gazebo/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_gazebo/config/: mycobot_280_controllers.yaml
mycobot_ros2/object_recognition/: CMakeLists.txt  package.xml
nikiro_gazebo/: CMakeLists.txt
nikiro_gazebo/launch/: nikiro.launch.py
nikiro_gazebo/urdf/: aruco1.urdf  aruco2.urdf  aruco3.urdf  bluecube.urdf  greencube.urdf  redcube.urdf
nikiro_gazebo/worlds/: nikiro.world
ros2_conveyorbelt/: CMakeLists.txt
ros2_conveyorbelt/python/: SpawnObject.py  summoner.py
(+102 files in other folders)
